# DataCenterInsurance

./: .gitignore  CLAUDE.md  INBOX.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
data/raw/: README.md  manifest.csv
data/raw/datacentermap/: robots.txt  sitemap.xml
data/raw/datacentermap/evidence/: cap_page_sample.html
data/raw/datacentermap/metros/: README.md
data/raw/datacentermap/metros/virginia/: manassas.html
data/raw/datacentermap/samples/: usa_virginia.html  usa_virginia_manassas.html  usa_virginia_manassas_10051-brickyard-wy.html
data/raw/datacentermap/sitemap/: dcs_1.xml  dcs_10.xml  dcs_11.xml  dcs_12.xml  dcs_13.xml  dcs_2.xml  dcs_3.xml  dcs_4.xml  dcs_5.xml  dcs_6.xml  dcs_7.xml  dcs_8.xml  dcs_9.xml  geos_1.xml  geos_2.xml  geos_3.xml
data/raw/spc/: 2005-2007_wind.csv  2019_wind.csv  2020_wind.csv  2021_hail.csv  2021_wind.csv  2024_hail.csv  2024_wind.csv  55-59_hail.csv  55-59_wind.csv  60-69_hail.csv  60-69_wind.csv  70-79_hail.csv  70-79_wind.csv  80-89_hail.csv  80-89_wind.csv
docs/: dc_scs_execution_plan.md  deviations.md  env.md  glossary.md  preregistration.md
reports/: phase1_recon_datacentermap.md
scripts/: fetch_raw.py  raw_sources.yaml  scrape_datacentermap.py
src/dc_scs/: manifest.py
src/dc_scs/inventory/: __init__.py  build.py  fetch.py  metros.py  parse.py
tests/: test_inventory_build.py  test_inventory_fetch.py  test_inventory_metros.py  test_inventory_parse.py  test_manifest.py  test_raw_sources.py  test_smoke.py
